--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,70 @@
-@media all and (max-width: 700px) {
-
+@media all and (max-width: 700px), (max-device-width: 700px) {
   .main-menu {
     display: none;
   }
+}
+
+a,
+a:visited{
+  text-decoration: none;
+  cursor: hand;
+  color: rgb(255, 255, 255);
+  outline: 0;
+}
+
+main a {
+  background-color: rgb(241, 72, 72);
+}
+
+ul {
+  list-style: none;
+}
+
+.main-menu a {
+  color: rgb(61,61,61);
+}
+
+.main-menu a:hover,
+.main-menu a:focus {
+  color: rgb(241, 72, 72);
+}
+
+.main-menu ul ul a:hover,
+.main-menu ul ul a:focus,
+.blog span,
+.blog h3 {
+  background-color: rgb(241, 72, 72);
+  color: rgb(255, 255, 255);
+}
+
+.tv-service a {
+  background-color: rgb(255, 255, 255);
+  color: rgb(241, 72, 72);
+}
+
+.sub-menus {
+  background-color: rgb(30,32,36);
+}
+
+.lower-footer {
+  background-color: rgb(21, 21, 21);
+  color: rgb(99,99,99);
+}
+
+.lower-footer a {
+  color: rgb(99,99,99);
+}
+
+.lower-footer a:hover,
+.lower-footer a:focus {
+  color:rgb(255,255,255);
+}
+
+.mmm-second a {
+  color: rgb(122, 122, 122);
+}
+
+.mmm-second a:hover,
+.mmm-second a:focus {
+  color: rgb(241, 72, 72);
 }
