--- a/styles/main.css
+++ b/styles/main.css
@@ -4,10 +4,12 @@
   }
 }
 
-a,
-a:visited{
+body {
+  font-family: "Source Sans Pro", sans-serif;
+}
+
+a {
   text-decoration: none;
-  cursor: hand;
   color: rgb(255, 255, 255);
   outline: 0;
 }
@@ -21,7 +23,7 @@ ul {
 }
 
 .main-menu a {
-  color: rgb(61,61,61);
+  color: rgb(61, 61, 61);
 }
 
 .main-menu a:hover,
@@ -37,27 +39,107 @@ ul {
   color: rgb(255, 255, 255);
 }
 
+.schedule-a-demo {
+  width: 100%;
+  height: 400px;
+  background-image: url(../assets/main-bg/home-brain-image-new-1920x816.png), url(../assets/main-bg/home-featured-bg.png);
+  background-repeat: no-repeat, no-repeat;
+  background-size: contain, auto auto;
+  text-align: center;
+  color: white;
+}
+
+.why-comigo {
+  width: 100%;
+  height: 300px;
+}
+
+.engagement {
+  width: 100%;
+  height: 400px;
+  display: none;
+}
+
 .tv-service a {
+  width: 100%;
+  height: 400px;
   background-color: rgb(255, 255, 255);
   color: rgb(241, 72, 72);
 }
 
+.android {
+  width: 100%;
+  height: 400px;
+}
+.blog {
+  width: 100%;
+  height: 400px;
+}
+
+.blog-text {
+  width: 16.666%;
+  height: 100%;
+  background-color: rgb(241, 72, 72);
+  float:left;
+}
+
+.blog ul {
+  width: 83.333%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  float:left;
+}
+
+.blog li {
+  width: 20%;
+  height: 100%;
+  float:left;
+  background-position: top center;
+}
+
+.blog a {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.blog li:nth-of-type(1) {
+  background-image: url(../assets/blog/ibc_post_EI-750x508.png);
+}
+
+.blog li:nth-of-type(2) {
+  background-image: url(../assets/blog/IMG_9294-750x563.jpeg);
+}
+
+.blog li:nth-of-type(3) {
+  background-image: url(../assets/blog/Image-Blog-Yoav_356121362-copy-750x563.jpg);
+}
+
+.blog li:nth-of-type(4) {
+  background-image: url(../assets/blog/post_tv_connect-750x508.jpeg);
+}
+
+.blog li:nth-of-type(5) {
+  background-image: url(../assets/blog/post_quality-750x508.jpeg);
+}
+
 .sub-menus {
-  background-color: rgb(30,32,36);
+  background-color: rgb(30, 32, 36);
 }
 
 .lower-footer {
   background-color: rgb(21, 21, 21);
-  color: rgb(99,99,99);
+  color: rgb(99, 99, 99);
 }
 
 .lower-footer a {
-  color: rgb(99,99,99);
+  color: rgb(99, 99, 99);
 }
 
 .lower-footer a:hover,
 .lower-footer a:focus {
-  color:rgb(255,255,255);
+  color: rgb(255, 255, 255);
 }
 
 .mmm-second a {
