--- a/styles/main.css
+++ b/styles/main.css
@@ -16,11 +16,32 @@ html {
 body {
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 300;
+  padding-top: 66px;
 }
 
 body > header {
   width: 100%;
-  height: 60px;
+  height: 66px;
+  line-height: 66px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: white;
+  text-align: right;
+  padding-right: 20px;
+}
+
+header > a {
+  height: 100%;
+  display: inline-block;
+  line-height: 66px;
+  position: absolute;
+  left:0;
+  padding-left:20px;
+}
+
+header > a > img {
+  vertical-align: middle;
 }
 
 a {
@@ -54,7 +75,7 @@ main a {
 }
 
 .main-menu {
-  padding-right: 0;
+  display: inline-block;
 }
 
 .main-menu a{
@@ -75,24 +96,60 @@ main a {
 
 .mm-first > li {
   display: inline-block;
+  margin-left: 18px;
 }
-.mm-second > li > a {
-  width: 33.333%;
-  height: 100px;
-  border: 1px dotted black;
+
+.mm-second {
+  position: absolute;
   display: none;
+  width:100%;
+  top:100%;
+  left:0;
+  font-size: 1.4rem;
+}
+
+.mm-second > li {
+  display: inline-block;
+  width: 33.33%;
+}
+
+.mm-first > li:hover > ul{
+  display: block;
+}
+
+.mm-second > li > a {
+  width: 100%;
+  height: 100px;
+  line-height: 100px;
+  display: block;
+  background-color: rgb(250,250,250);
   text-align: center;
 }
 
-/*li:hover > ul > li > a {*/
-  /*display: inline-block*/
-/*}*/
+.mm-third {
+  position: absolute;
+  display: none;
+  width:100%;
+  top:100%;
+  left:0;
+  font-size: 1.4rem;
+}
+
+.mm-third > li {
+  display: inline-block;
+  width: 50%;
+}
+
+.mm-second > li:hover > ul {
+  display: block;
+}
 
 .mm-third > li > a {
-  width: 50%;
+  width: 100%;
   height: 100px;
-  border: 1px dotted black;
-  display: none;
+  line-height: 100px;
+  display: block;
+  background-color: rgb(250,250,250);
   text-align: center;
 }
 
@@ -108,9 +165,10 @@ main a {
 }
 
 .schedule-a-demo-text {
-  margin: 0 auto;
-  width: 50%;
-  padding-top: 10%;
+  margin: auto;
+  width: 70%;
+  height: 50%;
+  padding: 10% 0;
 }
 
 h1, h2, h3, h4{
@@ -148,13 +206,74 @@ h4 {
 
 .engagement {
   width: 100%;
-  height: 400px;
+  height: 40.16vw;
+  overflow: hidden;
+  background-color: #449fdb;
+  position: relative;
+}
+
+.engagement-text {
+  width: 20%;
+  height: 100%;
+  padding-left: 10%;
+  padding-top: 4%;
+  font-size: 1.8em;
+  display: inline-block;
+  color:white;
+  margin: 0 14% 0 0;
+}
+
+.engagement-text span {
+  display: inline-block;
+  font-size: 0.4em;
+  font-weight: 100;
+}
+
+.engagement-list {
+  width: 65%;
+  height: 100%;
+  display: inline-block;
+  line-height: 2em;
+  vertical-align: top;
+  padding-top: 10px;
+}
+
+.engagement-list figure {
+  position: absolute;
+  right: 0;
+  top: 0;
+  display: none;
+  color:white;
+}
+
+.engagement-list li:last-child figure{
+  display: block;
+}
+
+.engagement-list li:hover ~ li figure {
+  display: none;
+}
+
+.engagement-list > li:hover > h4 {
+  color: rgb(241, 72, 72);
+  cursor: pointer;
+}
+.engagement-list li:hover figure {
+  display: block;
+}
+
+.engagement-list video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  opacity: .15;
   display: none;
 }
 
 .tv-service {
   width: 50vw;
-  height: 50vw;
+  height: 42.21vw;
   text-align: center;
   background-image: url(../assets/other/ic-ei-cloud-brain-hp.png), url(../assets/other/home-tv-service-bg1.png);
   background-repeat: no-repeat, no-repeat;
@@ -162,6 +281,7 @@ h4 {
   color: white;
   display: inline-block;
   vertical-align: top;
+  overflow: hidden;
 }
 
 .tv-service-text {
@@ -172,7 +292,8 @@ h4 {
 
 .android {
   width: 50vw;
-  height: 50vw;
+  height: 42.21vw;
+  overflow: hidden;
   background-image: url(../assets/other/ic-stb-screens.png), url(../assets/other/home-tv-service-bg2.png);
   background-repeat: no-repeat, no-repeat;
   background-size: 50%, auto;
@@ -191,8 +312,26 @@ h4 {
 }
 .experience {
   width: 100%;
-  height: 600px;
+  height: 50vw;
+  position: relative;
 }
+
+.experience img {
+  position: absolute;
+  right: -20px;
+  top: 5%;
+  overflow: hidden;
+}
+
+.experience-text
+{
+  width: 30%;
+  display: inline-block;
+  position: absolute;
+  left: 10%;
+  top: 5%;
+}
+
 .blog {
   width: 100%;
   height: 36.1111111111vw;
