--- a/styles/main.css
+++ b/styles/main.css
@@ -584,7 +584,7 @@ h2, h3, h4{
   display: inline-block;
 }
 
-.blog li {padding: 13%;
+.blog li {
   width: 20%;
   height: 100%;
   vertical-align: top;
