--- a/styles/main.css
+++ b/styles/main.css
@@ -257,7 +257,7 @@ main a {
 
 .schedule-a-demo {
   width: 100%;
-  height: 42.5vw;
+  /*height: 42.5vw;*/
   background-image: url(../assets/main-bg/home-brain-image-new-1920x816.png), url(../assets/main-bg/home-featured-bg.png);
   background-repeat: no-repeat, no-repeat;
   background-size: contain, auto auto;
@@ -268,14 +268,24 @@ main a {
 
 .schedule-a-demo h1 {
   font-weight: 400;
-  font-size: 3.6em;
+  font-size: 2.6em;
 }
 
 .schedule-a-demo-text {
-  margin: auto;
+  margin: 0 auto;
   width: 70%;
   height: 50%;
   padding: 10% 0;
+}
+
+@media all and (min-width: 701px) {
+
+  .schedule-a-demo {
+    height: 42.5vw;
+  }
+  .schedule-a-demo h1 {
+    font-size: 3.6em;
+  }
 }
 
 h2, h3, h4{
@@ -284,7 +294,7 @@ h2, h3, h4{
 
 .why-comigo {
   width: 100%;
-  height: 33.333vw;
+  /*height: 33.333vw;*/
   text-align: center;
   font-size: 2.6em;
 }
@@ -304,6 +314,13 @@ h2, h3, h4{
   font-weight: 100;
   font-size: 0.5em;
   line-height: 1.4em;
+}
+
+@media all and (min-width: 701px) {
+  .why-comigo{
+    height: 33.333vw;
+  }
+
 }
 
 .engagement {
